--- a/styles/dark.css
+++ b/styles/dark.css
@@ -19,7 +19,35 @@
   --decor-zone-color: #FF0070;
 }
 
-.page.theme_dark .header {
+@media (prefers-color-scheme: dark) {
+  :root {
+    /* Дублируем переменные темной темы */
+    --background-color: #000028;
+    --accent-color: #FF0070;
+    --text-shadow-color: #FF0070;
+    --main-title-color: #DB00FF;
+    --main-text-color: #000028;
+    --content-title-color: #FF0070;
+    --content-subtitle-color: #000028;
+    --content-text-color: #F1B2CE;
+    --decor-zone-color: #FF0070;
+  }
+
+  .page {
+    background-image: url(../images/cover-image-dark.png);
+  }
+
+  .header .record__text {
+    color: var(--accent-color);
+  }
+
+  .header .record__icon::after {
+    background-color: var(--accent-color);
+    filter: drop-shadow(0px 0px 4px var(--accent-color));
+  }
+}
+
+.page.theme_dark {
   background-image: url(../images/cover-image-dark.png);
 }
 
