--- a/styles/light.css
+++ b/styles/light.css
@@ -13,6 +13,7 @@
   --accent-color: #FF8DCB;
   --text-shadow-color: #FF0070;
   --main-title-color: #FFC2E6;
+  --main-text-color: #353430;
   --content-title-color: #353430;
   --content-subtitle-color: var(--content-title-color);
   --content-text-color: var(--content-title-color);
@@ -27,26 +28,27 @@
     --text-shadow-color: #FF0070;
     --main-title-color: #FFC2E6;
     --content-title-color: #353430;
-    --content-subtitle-color: var(--content-title-color);
+    --content-subtitle-color: #353430;
     --content-text-color: var(--content-title-color);
     --decor-zone-color: #353430;
   }
 
-  .header {
+  .page {
     background-image: url(../images/cover-image-light.png);
   }
 
-  .header .record__text {
-    color: var(--background-color);
+  .header .record {
+    display: none;
   }
 
-  .header .record__icon::after {
-    background-color: var(--background-color);
-    filter: drop-shadow(0px 0px 5px var(--background-color));
+  @media screen and (width <=768px) {
+    .header__title {
+      text-shadow: 4px 4px 0px var(--accent-color);
+    }
   }
 }
 
-.page.theme_light .header {
+.page.theme_light {
   background-image: url(../images/cover-image-light.png);
 }
 
@@ -61,4 +63,10 @@
 .page.theme_light .header .record__icon::after {
   background-color: var(--background-color);
   filter: drop-shadow(0px 0px 5px var(--background-color));
+}
+
+@media screen and (width <=768px) {
+  .page.theme_light .header__title {
+    text-shadow: 4px 4px 0px var(--accent-color);
+  }
 }
