--- a/styles/style.css
+++ b/styles/style.css
@@ -2,36 +2,23 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  font-family: IBM Plex Mono;
-  font-style: normal;
-  background-color: var(--background-color);
-  max-width: 1024px;
+  font-family: var(--main-font, monospace);
+  background: var(--background-color, #000028) url(../images/cover-image.png) center fixed / cover;
 }
 
 .header {
   position: relative;
-  padding: 20px;
   max-width: 100%;
-  height: 768px;
-  background-image: url(../images/cover-image.png);
-  background-size: cover;
-  background-position: center;
+  height: 100vh;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
   grid-template-columns: 1fr;
+  padding: 0;
 }
 
-@media screen and (375px < width <=768px) {
+@media screen and (width >=768px) {
   .header {
-    min-height: 1024px;
-  }
-}
-
-@media screen and (width <=375px) {
-  .header {
-    grid-template-rows: 1fr auto 1fr;
-    padding: 0;
-    max-height: 668px;
+    padding: 20px;
   }
 }
 
@@ -41,10 +28,10 @@
   display: block;
   width: 25px;
   height: 25px;
-  border-top: 1px solid var(--decor-zone-color);
-  border-right: 1px solid var(--decor-zone-color);
-  top: 20px;
-  right: 20px;
+  border-top: 1px solid var(--decor-zone-color, #FF0070);
+  border-right: 1px solid var(--decor-zone-color, #FF0070);
+  top: 10px;
+  right: 10px;
 }
 
 .decorated-zone::after {
@@ -53,21 +40,21 @@
   display: block;
   width: 25px;
   height: 25px;
-  border-left: 1px solid var(--decor-zone-color);
-  border-bottom: 1px solid var(--decor-zone-color);
-  bottom: 20px;
-  left: 20px;
+  border-left: 1px solid var(--decor-zone-color, #FF0070);
+  border-bottom: 1px solid var(--decor-zone-color, #FF0070);
+  bottom: 10px;
+  left: 10px;
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=768px) {
   .decorated-zone::before {
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
   }
 
   .decorated-zone::after {
-    bottom: 10px;
-    left: 10px;
+    bottom: 20px;
+    left: 20px;
   }
 }
 
@@ -75,26 +62,27 @@
   position: absolute;
   width: 25px;
   height: 25px;
-  top: 20px;
-  right: 55px;
   display: flex;
   align-items: center;
   gap: 9px;
+  top: 10px;
+  right: 45px;
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=768px) {
   .record {
-    top: 10px;
-    right: 45px;
+    top: 20px;
+    right: 55px;
   }
 }
 
 .record__text {
-  color: var(--accent-color);
+  color: var(--accent-color, #FF0070);
   text-align: center;
   font-size: 18px;
   font-weight: 400;
   line-height: 25px;
+  text-transform: uppercase;
 }
 
 .record__icon {
@@ -115,39 +103,44 @@
 }
 
 .header__theme-menu-list {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
   list-style-type: none;
   text-align: center;
-  color: var(--content-title-color);
+  color: var(--content-title-color, #FF0070);
   font-size: 18px;
   font-weight: 400;
   line-height: 18px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 10px;
+  margin-block-start: 75px;
+  margin-right: 2px;
 }
 
-@media screen and (width <=768px) {
+@media screen and (width >=768px) {
   .header__theme-menu-list {
     margin-block-start: 175px;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 15px;
+    margin-right: -8px;
   }
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=1024px) {
   .header__theme-menu-list {
-    margin-block-start: 75px;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 15px;
-    margin-right: 10px;
+    flex-direction: row;
+    margin: 0px;
   }
 }
 
 .header__theme-menu-item {
-  margin: 0 7px;
+  margin: 0px 7px;
   display: inline-block;
+}
+
+@media screen and (width >=1024px) {
+  .header__theme-menu-item {
+    margin: 0px;
+  }
 }
 
 .header__theme-menu-button {
@@ -155,33 +148,33 @@
   outline: none;
   text-decoration: none;
   background: transparent;
+  padding: 3px 14px 5px 14px;
+}
+
+@media screen and (width >= 768px) {
+  .header__theme-menu-button {
+    padding: 2px 14px 5px 14px;
+  }
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--content-title-color);
-  outline-offset: 5px;
+  outline: 1px solid var(--content-title-color, #FF0070);
+  /* outline-offset: 5px; */
 }
 
 .header__theme-menu-button:hover {
+  cursor: pointer;
   outline: 1px solid rgba(255, 0, 112, 0.40);
-  outline-offset: 5px;
+  /* outline-offset: 5px; */
 }
 
 .header__theme-menu-button:focus {
   outline: none;
 }
 
-.header__theme-menu-button:focus-visible::after {
-  content: "";
-  display: block;
-  height: 1px;
-  max-width: 140%;
-  /* Adjust this value to control the length of the underline */
-  background-color: var(--content-title-color);
-  /* Change this to the color you want for the underline */
-  position: relative;
-  left: -20%;
-  /* Adjust this value to center the underline */
+.header__theme-menu-button:focus-visible {
+  padding-bottom: 6px;
+  border-bottom: 1px solid var(--content-title-color, #FF0070);
 }
 
 button:disabled {
@@ -189,12 +182,11 @@ button:disabled {
 }
 
 .header__title {
-  max-width: 759px;
-  max-height: 130px;
-  margin-left: -20px;
-  color: var(--main-title-color);
-  text-shadow: 4px 4px 0px var(--text-shadow-color);
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  max-width: 355px;
+  margin-left: 10px;
+  color: var(--main-title-color, #DB00FF);
+  text-shadow: 4px 4px 0px var(--text-shadow-color, #FF0070);
   font-weight: 700;
   line-height: 82.5%;
   text-align: left;
@@ -202,52 +194,50 @@ button:disabled {
   align-self: center;
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=768px) {
   .header__title {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    max-width: 355px;
-    max-height: 192px;
-    margin-left: 10px;
+    max-width: 759px;
+    margin-left: -20px;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
 
 .header__text {
-  max-width: 491px;
-  max-height: 71px;
-  color: #000028;
+  color: var(--main-text-color);
   font-size: 18px;
   font-weight: 700;
   line-height: 23.4px;
-  background-color: var(--accent-color);
+  background-color: var(--accent-color, #FF0070);
   justify-self: right;
   align-self: center;
+  max-width: 355px;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
-@media screen and (width <=786px) {
+@media screen and (width >=768px) {
   .header__text {
-    max-height: 117px;
     max-width: 365px;
+    margin: 0;
   }
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=1024px) {
   .header__text {
-    max-width: 355px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    max-width: 491px;
   }
 }
 
 .content__title {
-  color: var(--content-subtitle-color);
+  color: var(--content-subtitle-color, #000028);
   font-size: 18px;
   font-weight: 700;
   line-height: 23.4px;
-  background-color: var(--accent-color);
+  background-color: var(--accent-color, #FF0070);
 }
 
 .content__text {
-  color: var(--content-text-color);
+  color: var(--content-text-color, #F1B2CE);
   font-size: 18px;
   font-weight: 400;
   line-height: 23.4px;
@@ -255,11 +245,11 @@ button:disabled {
 
 .content__link {
   text-decoration: none;
-  text-shadow: 2px 2px 0px var(--accent-color);
+  text-shadow: 2px 2px 0px var(--accent-color, #FF0070);
 }
 
 .content__link:hover {
-  border-bottom: 1px solid var(--content-text-color);
+  border-bottom: 1px solid var(--content-text-color, #F1B2CE);
 }
 
 .content__link:focus {
@@ -267,50 +257,45 @@ button:disabled {
 }
 
 .content__link:focus-visible {
-  outline: 1px solid var(--content-text-color);
+  outline: 1px solid var(--content-text-color, #F1B2CE);
 }
 
 .section_explanation {
-  max-width: 1024px;
-  min-height: 508px;
-  margin-top: 60px;
-  padding: 0 20px;
+  max-width: 100vw;
+  margin-top: 40px;
+  padding: 0 10px;
+  flex-direction: column;
   display: flex;
   gap: 20px;
 }
 
-@media screen and (375px < width <=768px) {
+@media screen and (width >=768px) {
   .section_explanation {
-    max-width: 768px;
-    min-height: 648px;
-  }
-}
-
-@media screen and (width <=375px) {
-  .section_explanation {
-    max-width: 375px;
-    min-height: 949px;
-    margin-top: 40px;
-    padding: 0 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+    flex-direction: row;
+    margin-top: 60px;
+    margin-bottom: 80px;
+    padding: 0 20px;
   }
 }
 
 .section_explanation__title {
-  width: 315px;
-  height: 47px;
-  margin-bottom: 20px;
-  color: var(--content-title-color);
+  min-width: 236px;
+  /*не лишний */
+  color: var(--content-title-color, #FF0070);
   font-size: 18px;
   font-weight: 700;
   line-height: 23.4px;
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=768px) {
   .section_explanation__title {
-    margin-bottom: 0px;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (width >=1024px) {
+  .section_explanation__title {
+    min-width: 314px;
   }
 }
 
@@ -318,22 +303,18 @@ button:disabled {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  max-width: 100vw;
 }
 
-@media screen and (375px < width <=768px) {
+@media screen and (width >=768px) {
   .section_explanation__content {
-    margin-left: 7px;
-  }
-}
-
-@media screen and (width <=375px) {
-  .section_explanation__content {
-    max-width: 355px;
+    margin-left: 0;
   }
 }
 
 .explanation_card {
-  max-width: 650px;
+  width: 100%;
+
 }
 
 .explanation_card .content__title {
@@ -341,69 +322,73 @@ button:disabled {
 }
 
 .section_reasons {
-  max-width: 1024px;
-  min-height: 498px;
-  padding: 0 20px;
-  margin-top: 80px;
-  margin-bottom: 80px;
+  max-width: 100vw;
+  padding: 0 10px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
-@media screen and (375px < width <=768px) {
+@media screen and (width >=768px) {
   .section_reasons {
-    max-width: 768px;
-    min-height: 755px;
-    margin-bottom: 0;
+    padding: 0 20px;
+    margin-bottom: 80px;
   }
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=1024px) {
   .section_reasons {
-    max-width: 375px;
-    min-height: 1119px;
-    padding: 0 10px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 80px;
+    margin-bottom: 80px;
   }
 }
 
 .section_reasons__title {
-  width: 315px;
-  height: 47px;
-  margin-bottom: 20px;
-  color: var(--content-title-color);
+  color: var(--content-title-color, #FF0070);
   font-size: 18px;
   font-weight: 700;
   line-height: 23.4px;
+  margin-bottom: 20px;
 }
 
-@media screen and (375px < width <=768px) {
+@media screen and (width >=768px) {
   .section_reasons__title {
     max-width: 236px;
-    min-height: 70px;
-    margin-bottom: 20px;
+  }
+}
+
+@media screen and (width >=1024px) {
+  .section_reasons__title {
+    max-width: 315px;
   }
 }
 
 .section_reasons__content {
+  flex-direction: column;
+  max-width: 355px;
   display: flex;
   gap: 20px;
 }
 
-@media screen and (width <=768px) {
+@media screen and (width >=768px) {
   .section_reasons__content {
-    max-width: 728px;
-    flex-direction: column;
+    max-width: none;
   }
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=1024px) {
   .section_reasons__content {
-    max-width: 355px;
+    flex-direction: row;
   }
 }
 
 .reason_card {
-  min-width: 315px;
+  width: auto;
+}
+
+@media screen and (width >=1024px) {
+  .reason_card {
+    min-width: 315px;
+  }
 }
 
 .reason_card .content__title {
@@ -411,59 +396,60 @@ button:disabled {
 }
 
 .section_advices {
-  max-width: 1024px;
-  min-height: 1015px;
-  padding: 0 20px;
+  max-width: 100vw;
   display: flex;
+  flex-direction: column;
   gap: 20px;
-  margin-bottom: 80px;
+  padding: 0 10px;
+  margin-bottom: 50px;
 }
 
-@media screen and (width <=768px) {
+@media screen and (width >=768px) {
   .section_advices {
-    max-width: 768px;
-    min-height: 1297px;
+    flex-direction: row;
+    padding: 0 20px;
+    margin-bottom: 80px;
   }
-
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=1024px) {
   .section_advices {
-    max-width: 375px;
-    min-height: 1707px;
-    flex-direction: column;
-    padding: 0 10px;
-    margin-bottom: 50px;
+    padding: 0 20px;
+    margin-bottom: 80px;
   }
-
 }
 
 .section_advices__title {
-  max-width: 315px;
-  height: 47px;
-  margin-bottom: 20px;
-  color: var(--content-title-color);
+  max-width: 355px;
+  color: var(--content-title-color, #FF0070);
   font-size: 18px;
   font-weight: 700;
   line-height: 23.4px;
 }
 
-@media screen and (width <=768px) {
+@media screen and (width >=768px) {
   .section_advices__title {
-    max-width: 236px;
+    min-width: 236px;
   }
-
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=1024px) {
   .section_advices__title {
-    max-width: 355px;
-    margin-bottom: 23px;
+    min-width: 315px;
+    margin-bottom: 20px;
   }
-
 }
 
-.first_card_empty {
+.section_advices__content-subtitle {
+  color: var(--content-subtitle-color, #000028);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23.4px;
+  background-color: var(--accent-color, #FF0070);
+  margin-bottom: 10px;
+}
+
+.section_advices__content .explanation_card:first-child {
   margin-bottom: -10px;
 }
 
@@ -473,205 +459,106 @@ button:disabled {
   gap: 20px;
 }
 
-@media screen and (375px < width <=768px) {
+@media screen and (width >=768px) {
   .section_advices__content {
-    max-width: 472px;
-  }
-}
-
-@media screen and (width <=375px) {
-  .section_advices__content {
-    max-width: 355px;
+    min-width: 472px;
   }
 }
 
 .section_images {
-  padding: 0 20px;
-  margin-bottom: 60px;
+  padding: 0 10px;
+  margin-bottom: 40px;
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=768px) {
   .section_images {
-    padding: 0 10px;
-    margin-bottom: 40px;
+    padding: 0 20px;
+    margin-bottom: 56px;
   }
-
 }
 
 .section_images__title {
-  max-width: 1024px;
-  color: #000028;
+  margin-bottom: 10px;
+  color: var(--content-subtitle-color, #000028);
   font-size: 18px;
   font-weight: 700;
   line-height: 23.4px;
-  /* 130% */
-  background-color: var(--accent-color);
-  margin-bottom: 20px;
+  background-color: var(--accent-color, #FF0070);
 }
 
-@media screen and (width <=768px) {
+@media screen and (width >=768px) {
   .section_images__title {
-    max-width: 768px;
     margin-bottom: 20px;
   }
 }
 
-@media screen and (width <=375px) {
-  .section_images__title {
-    max-width: 375px;
-    margin-bottom: 10px;
-  }
-}
-
 .section_images__content {
-  max-width: 1024px;
   display: grid;
-  grid-template-columns: repeat(3, 315px);
-  grid-template-rows: 260px 315px 428px;
-  gap: 20px;
+  grid-template-columns: 100%;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "sunset"
+    "icecream"
+    "tape"
+    "books"
+    "street";
+  gap: 10px;
+  align-items: stretch;
 }
 
-@media screen and (width <=768px) {
-  .section_images__content {
-    max-width: 728px;
-    display: grid;
-    grid-template-columns: 229px 230px 229px;
-    grid-template-rows: 192px 230px 318px;
-  }
-
+.section_images__content>img {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=768px) {
   .section_images__content {
-    max-width: 355px;
-    min-height: 1366px;
-    display: grid;
-    grid-template-columns: 355px;
-    grid-template-rows: auto;
+    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    grid-template-rows: repeat(auto-fit, 190px);
     grid-template-areas:
-      "sunset"
-      "icecream"
-      "tape"
-      "books"
-      "street";
-    gap: 10px;
+      "sunset sunset icecream"
+      "tape books icecream"
+      "tape street street";
+    gap: 20px;
   }
 }
 
-.left-top-place {
-  grid-column: 1 / 3;
-  grid-row: 1 / 2;
-  width: 649px;
-  height: 260px;
+@media screen and (width >=1024px) {
+  .section_images__content {
+    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
+    grid-template-rows: repeat(auto-fit, 260px);
+  }
+}
+
+.img-grid:nth-of-type(1) {
+  grid-area: sunset;
   object-fit: cover;
 }
 
-@media screen and (width <=768px) {
-  .left-top-place {
-    width: 479px;
-    height: 192px;
-  }
-}
-
-@media screen and (width <=375px) {
-  .left-top-place {
-    grid-area: sunset;
-    width: 355px;
-    height: 142px;
-  }
-}
-
-.right-top-place {
-  grid-column: 3 / 4;
-  grid-row: 1 / 3;
-  width: 315px;
-  height: 595px;
+.img-grid:nth-of-type(2) {
+  grid-area: icecream;
   object-fit: cover;
 }
 
-@media screen and (width <=768px) {
-  .right-top-place {
-    width: 229px;
-    height: 441px;
-  }
-}
-
-@media screen and (width <=375px) {
-  .right-top-place {
-    grid-area: icecream;
-    width: 355px;
-    height: 355px;
-  }
-}
-
-.center-place {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-  width: 315px;
-  height: 315px;
+.img-grid:nth-of-type(3) {
+  grid-area: books;
   object-fit: cover;
 }
 
-@media screen and (width <=768px) {
-  .center-place {
-    width: 230px;
-    height: 230px;
-  }
-}
-
-@media screen and (width <=375px) {
-  .center-place {
-    grid-area: books;
-    width: 355px;
-    height: 355px;
-  }
-}
-
-.left-bottom-place {
-  grid-column: 1 / 2;
-  grid-row: 2 / 4;
-  width: 315px;
-  height: 768px;
+.img-grid:nth-of-type(4) {
+  grid-area: tape;
   object-fit: cover;
 }
 
-@media screen and (width <=768px) {
-  .left-bottom-place {
-    width: 229px;
-    height: 568px;
-  }
-}
-
-@media screen and (width <=375px) {
-  .left-bottom-place {
-    grid-area: tape;
-    width: 355px;
-    height: 237px;
-  }
-}
-
-.right-bottom-place {
-  margin-top: 5px;
-  grid-column: 2 / 4;
-  grid-row: 3 / 4;
-  width: 649px;
-  height: 428px;
+.img-grid:nth-of-type(5) {
+  grid-area: street;
   object-fit: cover;
 }
 
-@media screen and (width <=768px) {
-  .right-bottom-place {
-    margin-top: 0;
-    width: 479px;
-    height: 318px;
-  }
-}
-
-@media screen and (width <=375px) {
-  .right-bottom-place {
-    grid-area: street;
-    width: 355px;
-    height: 237px;
+@media screen and (width >=768px) {
+  .img-grid:nth-of-type(5) {
+    margin-top: 5px;
   }
 }
 
@@ -680,37 +567,28 @@ button:disabled {
   display: flex;
   max-width: 100vw;
   height: 100vh;
-  padding: 20px;
+  padding: 10px;
   justify-content: center;
   align-items: center;
 }
 
-@media screen and (375px < width <=768px) {
+@media screen and (width >=768px) {
   .footer {
-    /* max-width: 768px; */
-    /* min-height: 1024px; */
     padding: 20px;
   }
 }
 
-@media screen and (width <=375px) {
-  .footer {
-    /* max-width: 375px; */
-    /* max-height: 667px; */
-    padding: 10px;
-  }
-}
-
 .footer__title {
-  color: var(--main-title-color);
-  text-shadow: 2px 2px 0px var(--accent-color);
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  color: var(--main-title-color, #DB00FF);
+  text-shadow: 2px 2px 0px var(--accent-color, #FF0070);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+
   font-weight: 700;
   line-height: 82.5%;
 }
 
-@media screen and (width <=375px) {
+@media screen and (width >=768px) {
   .footer__title {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
