--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,6 +4,7 @@
 */
 
 :root {
+  --main-font: "IBM Plex Mono";
   --background-color: #000028;
   --accent-color: #FF0070;
   --text-shadow-color: #FF0070;
